SourceOrg/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Formula_FTE_In_Kansas__c</fullName>
        <description>FTE from data.com if the State is Kansas</description>
        <formula>If
(
(CASE(BillingState,&apos;Kansas&apos;, 1,&apos;KS&apos;, 1,0)+ CASE(ShippingState,&apos;Kansas&apos;, 1,&apos;KS&apos;, 1,0)+
CASE(DandbCompany.State,&apos;Kansas&apos;, 1,&apos;KS&apos;, 1,0)+ CASE(DandbCompany.MailingState,&apos;Kansas&apos;,1,&apos;KS&apos;,1,0))&gt;0
,DandbCompany.EmployeesHere,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>FTE from data.com if the State is Kansas</inlineHelpText>
        <label>Formula FTE In Kansas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formula_ITE_A_1__c</fullName>
        <formula>IF( 
Length_Relationship_In_Master_Org_Level__c &gt;0, 
( ( D_ITVendorSpending__c +  D_CostSavings__c  ) / Length_Relationship_In_Master_Org_Level__c / 100000 ) ,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula ITE A 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formula_ITE_A_2__c</fullName>
        <formula>IF( 
Length_Relationship_In_Master_Org_Level__c &gt;0, 
( N_OfExecutiveBriefings__c / Length_Relationship_In_Master_Org_Level__c ),
0
)</formula>
        <label>Formula ITE A 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formula_ITE_E_1__c</fullName>
        <formula>IF( 
EV_Length_Of_Relationship__c &gt;0, 
( (  EV_Of_IT_Vendor_Spending__c  +  EV_Cost_Saving__c  ) / EV_Length_Of_Relationship__c / 100000 ) , 
0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula ITE E 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formula_ITE_E_2__c</fullName>
        <formula>IF( 
EV_Length_Of_Relationship__c &gt;0, 
(  EV_Of_Executive_Briefings__c  / EV_Length_Of_Relationship__c ), 
0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula ITE E 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formula_KT_A_1__c</fullName>
        <formula>IF( 
AND(
Length_Relationship_In_Master_Org_Level__c&gt;0,
N_OfCareerFairEvents__c &gt;0
),  
( ( N_OfInternships__c +  N_OfJobsPosted__c +  N_OfInterviewsOnCampus__c + N_OfCareerFairEvents__c ) / N_OfCareerFairEvents__c / Length_Relationship_In_Master_Org_Level__c ),
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula KT A 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formula_KT_A_2__c</fullName>
        <formula>IF( 
Length_Relationship_In_Master_Org_Level__c&gt;0,
( ( N_OfCoursesWithFirmInput__c  +   N_OfJointSupervisorsofPhDandMaster__c )/ Length_Relationship_In_Master_Org_Level__c ),
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula KT A 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formula_KT_A_3__c</fullName>
        <formula>IF( 
Length_Relationship_In_Master_Org_Level__c &gt;0,  
( D_ForCapstoneProjects__c  / Length_Relationship_In_Master_Org_Level__c  / 100000),
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula KT A 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formula_KT_E_1__c</fullName>
        <formula>IF( 
AND( 
EV_Length_Of_Relationship__c&gt;0, 
 EV_Of_Career_Dair_Events__c  &gt;0 
), 
( (  EV_Of_Internships__c  +  EV_Of_Jobs_Posted__c  +  EV_Interviews_On_Campus__c  + EV_Of_Career_Dair_Events__c ) /  EV_Of_Career_Dair_Events__c / EV_Length_Of_Relationship__c ), 
0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula KT E 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formula_KT_E_2__c</fullName>
        <formula>IF( 
EV_Length_Of_Relationship__c&gt;0, 
( (  EV_Of_Courses_With_Firm_Input__c  +  EV_Of_Joint_Supervisors_Of_PhD_M_These__c  )/ EV_Length_Of_Relationship__c ), 
0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula KT E 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formula_KT_E_3__c</fullName>
        <formula>IF( 
EV_Length_Of_Relationship__c &gt;0, 
(  EV_For_Capstone_Projects__c  / EV_Length_Of_Relationship__c / 100000), 
0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula KT E 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formula_PC_A_1__c</fullName>
        <formula>IF( 
Length_Relationship_In_Master_Org_Level__c &gt;0,  
(   D_Of_Gifts_To_KU__c    / Length_Relationship_In_Master_Org_Level__c  / 100000),
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula PC A 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formula_PC_A_2__c</fullName>
        <formula>(N_OfMajorEntitiesCollaboratingWithFirm__c -  N_OfFirmCollaborationActivities__c *0.25 *  Length_Relationship_In_Master_Org_Level__c )/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula PC A 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formula_PC_A_3__c</fullName>
        <formula>IF(
N_OfFirmEmployees__c &gt;0,
(( N_OfKUStaffConsultingForFirm__c +  N_Of_KU_Alumni_Working_In_Firm__c +  N_Of_Key_KU_Alumni__c *2 +  N_Of_KU_Alumni_Serving_On_Firm_Board__c *3 )/N_OfFirmEmployees__c ),
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula PC A 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formula_PC_E_1__c</fullName>
        <formula>IF( 
EV_Length_Of_Relationship__c&gt;0, 
(  EV_Of_Gifts_To_KU__c  / EV_Length_Of_Relationship__c/ 100000), 
0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula PC E 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formula_PC_E_2__c</fullName>
        <formula>( EV_Of_Major_Entities_Collaborating__c  -  EV_Of_Firm_Activities_With_Other_U__c  *0.25 * EV_Length_Of_Relationship__c )/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula PC E 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formula_PC_E_3__c</fullName>
        <formula>IF( 
N_OfFirmEmployees__c &gt;0, 
((  EV_Of_KU_F_S_Consulting_For_Firm__c  +  EV_Of_KU_Alumni_Working_In_Firm__c  +  EV_Of_Key_KU_Alumni__c *2 +  EV_Of_KU_Alumni_Serving_On_Firm_Board__c *3 )/N_OfFirmEmployees__c ), 
0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula PC E 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formula_R_S_A_1__c</fullName>
        <formula>IF( 
Length_Relationship_In_Master_Org_Level__c  &gt; 0,
N_OfSponsoredResearchProposals__c / Length_Relationship_In_Master_Org_Level__c,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula R&amp;S A 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formula_R_S_A_2__c</fullName>
        <formula>IF( 
AND( N_OfSponsoredResearchProposals__c &gt; 0, Length_Relationship_In_Master_Org_Level__c &gt;0), 
(  N_OfSponsoredResearchAwards__c / N_OfSponsoredResearchProposals__c / Length_Relationship_In_Master_Org_Level__c ),
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula R&amp;S A 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formula_R_S_A_3__c</fullName>
        <formula>IF( 
Length_Relationship_In_Master_Org_Level__c &gt;0, 
(  D_SponsoredResearchAwards__c / Length_Relationship_In_Master_Org_Level__c  / 100000),
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula R&amp;S A 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formula_R_S_E_1__c</fullName>
        <formula>IF( 
 EV_Length_Of_Relationship__c  &gt; 0, 
EV_Of_Sponsored_Research_Proposals__c / EV_Length_Of_Relationship__c, 
0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula R&amp;S E 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formula_R_S_E_2__c</fullName>
        <formula>IF( 
AND(  EV_Of_Sponsored_Research_Proposals__c  &gt; 0,  EV_Length_Of_Relationship__c  &gt;0), 
(  EV_NOf_Sponsored_Research_Awards__c  / EV_Of_Sponsored_Research_Proposals__c / EV_Length_Of_Relationship__c ), 
0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula R&amp;S E 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formula_R_S_E_3__c</fullName>
        <formula>IF( 
 EV_Length_Of_Relationship__c  &gt;0, 
(  EV_Of_Sponsored_Research_Awards__c  / EV_Length_Of_Relationship__c / 100000), 
0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula R&amp;S E 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Foursquare_Image__c</fullName>
        <description>Image to indicate which quadrant position the Valuation puts the Master Organization in</description>
        <formula>IF( Valuation_Ratio__c &lt;0.35, 
IMAGE(&quot;https://ku--c.na15.content.force.com/servlet/servlet.ImageServer?id=015i0000001KpDp&amp;oid=00D8A0000008tnJ&amp;lastMod=1384417953000&quot;, &quot;Prospect-Hold&quot;, 100, 179), 
 IF( AND (Valuation_Ratio__c &gt;= 0.35, Valuation_Ratio__c&lt;0.5), 
 IMAGE(&quot;https://ku--c.na15.content.force.com/servlet/servlet.ImageServer?id=015i0000001KpDm&amp;oid=00D8A0000008tnJ&amp;lastMod=1384417953000&quot;, &quot;Significant-Hold&quot;, 100, 179), 
  IF(AND (Valuation_Ratio__c &gt;= 0.5, Valuation_Ratio__c&lt;0.65), 
  IMAGE(&quot;https://ku--c.na15.content.force.com/servlet/servlet.ImageServer?id=015i0000001KpDo&amp;oid=00D8A0000008tnJ&amp;lastMod=1384417953000&quot;, &quot;Strategic-Hold&quot;, 100, 179), 
   IF(AND (Valuation_Ratio__c &gt;= 0.65,Valuation_Ratio__c&lt;0.8  ), 
   IMAGE(&quot;https://ku--c.na15.content.force.com/servlet/servlet.ImageServer?id=015i0000001KpDk&amp;oid=00D8A0000008tnJ&amp;lastMod=1384417953000&quot;, &quot;Prospect-Grow&quot;, 100, 179), 
    IF(AND (Valuation_Ratio__c&gt;= 0.8, Valuation_Ratio__c&lt;0.95), 
    IMAGE(&quot;https://ku--c.na15.content.force.com/servlet/servlet.ImageServer?id=015i0000001KpDl&amp;oid=00D8A0000008tnJ&amp;lastMod=1384417953000&quot;, &quot;Significant-Grow&quot;, 100, 179),
     IMAGE(&quot;https://ku--c.na15.content.force.com/servlet/servlet.ImageServer?id=015i0000001KpDn&amp;oid=00D8A0000008tnJ&amp;lastMod=1384417953000&quot;, &quot;Strategic-Grow&quot;, 100, 179)
)
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Image to indicate which quadrant position the Valuation puts the Master Organization in</inlineHelpText>
        <label>Foursquare Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geographic_Proximity_Of_Firm_To_Universi__c</fullName>
        <description>Distance in Miles between KU and Firm (Billing Address)</description>
        <inlineHelpText>Distance in Miles between KU and Firm (Billing Address)</inlineHelpText>
        <label>GeographicProximity of Firm ToUniversity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Parent_Name__c</fullName>
        <label>Global Parent Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grandparent_Account_ID__c</fullName>
        <description>The highest account in the account hierarchy. Filled in by SQL.</description>
        <label>Grandparent Account ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grandparent__c</fullName>
        <description>Checked if Grandparent ID is the Account ID. This Account is at the top of the hierarchy if checked.</description>
        <formula>IF (  Grandparent_Account_ID__c =   CASESAFEID(Id) , true, false)</formula>
        <inlineHelpText>This Account is at the top of the hierarchy.</inlineHelpText>
        <label>Grandparent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intersection_Points__c</fullName>
        <description>Manual Entry - Intersection Points</description>
        <inlineHelpText>Manual Entry - Intersection Points</inlineHelpText>
        <label>Intersection Points</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Is_CTC_Agreement_Organization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CTC Agreement Organization?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Continuing_Education_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Continuing Education Client?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_ExecEd_Open_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ExecEd Open Client?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_KU_A_Strategic_Hiring_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is KU A Strategic Hiring Partner?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Major_Endowment_Organization__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Have company give a  major gift (or gifts) within the last year?</inlineHelpText>
        <label>Major Endowment Organization?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Master_RA_In_Place__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Master RA In Place?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Research_Grant_Sponsor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Research Grant Sponsor?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Strategic_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Strategic Company?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KU_Division_Generating_Report__c</fullName>
        <description>KU Division Generating Report</description>
        <inlineHelpText>KU Division Generating Report</inlineHelpText>
        <label>KU Division Generating Report</label>
        <picklist>
            <picklistValues>
                <fullName>Business Career Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Continuing Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering Career Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KU Endowment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office of Corporate Partnerships</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Technology Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>University Career Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Key_Focus_Areas__c</fullName>
        <description>KEY COMPANY RESEARCH/FOCUS AREAS</description>
        <inlineHelpText>KEY COMPANY RESEARCH/FOCUS AREAS</inlineHelpText>
        <label>Key Focus Areas</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Length_Of_Client_Relationship_Years__c</fullName>
        <label>Length Of Client Relationship Years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Length_Relationship_In_Master_Org_Level__c</fullName>
        <formula>IF( 
AND( 
ISNULL( Longest_length_Relation_From_Contact__c ), 
ISNULL( Longest_length_Relation_From_Source_Org__c )
), 
0, 
MAX( Longest_length_Relation_From_Contact__c, Longest_length_Relation_From_Source_Org__c )/365
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Length Relationship In Master Org Level</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <label>Location Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longest_length_Relation_From_Contact__c</fullName>
        <label>Longest length Relation From Contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Longest_length_Relation_From_Source_Org__c</fullName>
        <label>Longest length Relation From Source Org</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MALatitude__c</fullName>
        <label>Latitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MALongitude__c</fullName>
        <label>Longitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MORollup__c</fullName>
        <description>This flag will be set to True if the Master Organization has been rolled up to the Global Ultimate DUNS number.</description>
        <formula>DunsNumber  =  DB_DUNS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MORollup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>N_CDA_In_Place_Between_Firm_And_KU__c</fullName>
        <defaultValue>0</defaultValue>
        <label># CDA In Place Between Firm And KU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_CO_Key_Executive_Visits_To_KU__c</fullName>
        <defaultValue>0</defaultValue>
        <label># CO Key Executive Visits To KU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_CollaborativePolicyChangingActivities__c</fullName>
        <defaultValue>0</defaultValue>
        <label># CollaborativePolicyChangingActivities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_Company_FTE_Located_In_Kansas__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>If a company has an International headquarters outside of Kansas, this field will not be populated.</inlineHelpText>
        <label># Company FTE Located In Kansas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_Company_FTE_Located_In_Region_OK_MO__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>If a company has an International headquarters outside of the region, this field will not be populated.</inlineHelpText>
        <label># Company FTE Located In Region</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_Company_Reps_On_KUCTC_Board__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Company Reps On KUCTC Board</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_KU_Researchers_With_Non_KU_Relationshi__c</fullName>
        <defaultValue>0</defaultValue>
        <label># KU Researchers With NonKU Relationship</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_KU_Visits_To_CO_HQ__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Rollup of # KU Visits To Company HQ</description>
        <inlineHelpText>Rollup of # KU Visits To Company HQ</inlineHelpText>
        <label># KU Visits To Company HQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_OfCareerFairEvents__c</fullName>
        <label># OfCareerFairEvents</label>
        <summarizedField>Source_Organization__c.of_career_fair_events__c</summarizedField>
        <summaryForeignKey>Source_Organization__c.Master_Organization__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>N_OfCitationsOfKUFirmPublications__c</fullName>
        <defaultValue>0</defaultValue>
        <label># OfCitationsOfKU-FirmPublications</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_OfCompanyFTELocatedInKUBTBC__c</fullName>
        <defaultValue>0</defaultValue>
        <label># OfCompanyFTELocatedInKUBTBC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_OfCoursesWithFirmInput__c</fullName>
        <defaultValue>0</defaultValue>
        <label># OfCoursesWithFirmInput</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_OfExecutiveBriefings__c</fullName>
        <defaultValue>0</defaultValue>
        <label># OfExecutiveBriefings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_OfFirmCollaborationActivities__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Rollup Of # Of Firm Collaborations With Other Universities From Source Organizations - Not Interactions</description>
        <inlineHelpText>Rollup Of # Of Firm Collaborations With Other Universities From Source Organizations - Not Interactions</inlineHelpText>
        <label># Of Firm Collaborations With Other Univ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_OfFirmEmployees__c</fullName>
        <formula>DandbCompany.GlobalUltimateTotalEmployees</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>#OfFirmEmployees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_OfInternships__c</fullName>
        <label># OfInternships</label>
        <summarizedField>Source_Organization__c.of_internships__c</summarizedField>
        <summaryForeignKey>Source_Organization__c.Master_Organization__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>N_OfInterviewsOnCampus__c</fullName>
        <defaultValue>0</defaultValue>
        <label># OfInterviewsOnCampus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_OfJobsPosted__c</fullName>
        <label># OfJobsPosted</label>
        <summarizedField>Source_Organization__c.of_Jobs_posted__c</summarizedField>
        <summaryForeignKey>Source_Organization__c.Master_Organization__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>N_OfJointInventionDisclosuresReceived__c</fullName>
        <defaultValue>0</defaultValue>
        <label># OfJointInventionDisclosuresReceived</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_OfJointSupervisorsofPhDandMaster__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Of Joint Supervisors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_OfKUFacilitiesUsedByFirms__c</fullName>
        <defaultValue>0</defaultValue>
        <label># OfKUFacilitiesUsedByFirm</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_OfKUStaffConsultingForFirm__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Rollup Value Of # Of KU Staff Consulting For Firm</description>
        <inlineHelpText>Rollup Value Of # Of KU Staff Consulting For Firm</inlineHelpText>
        <label># Of KU Staff Consulting For Firm</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_OfMajorEntitiesCollaboratingWithFirm__c</fullName>
        <label># OfMajorEntitiesCollaboratingWithFirm</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_OfNewsStoriesOfKUFirmPartnership__c</fullName>
        <defaultValue>0</defaultValue>
        <label># OfNewsStoriesOfKUFirmPartnership</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_OfServiceAgreements__c</fullName>
        <label># OfServiceAgreements</label>
        <summarizedField>Source_Organization__c.of_service_agreements__c</summarizedField>
        <summaryForeignKey>Source_Organization__c.Master_Organization__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>N_OfSponsoredResearchAwards__c</fullName>
        <label># Of Sponsored Research Awards</label>
        <summarizedField>Source_Organization__c.of_Sponsored_Research_Awards__c</summarizedField>
        <summaryForeignKey>Source_Organization__c.Master_Organization__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>N_OfSponsoredResearchProposals__c</fullName>
        <description>Rollup of # Of Sponsored Research Proposals</description>
        <inlineHelpText>Rollup of # Of Sponsored Research Proposals</inlineHelpText>
        <label># Of Sponsored Research Proposals</label>
        <summarizedField>Source_Organization__c.Of_Sponsored_Research_Proposals__c</summarizedField>
        <summaryForeignKey>Source_Organization__c.Master_Organization__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>N_OfTimesKUEquipmentLeased__c</fullName>
        <defaultValue>0</defaultValue>
        <label># OfTimesKUEquipmentLeased</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_OfUniversityResearcherstoFirmsForSabba__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Of KU Researchers For Sabbatical</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_OfWorkshops__c</fullName>
        <defaultValue>0</defaultValue>
        <label># OfWorkshops</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_Of_Calls_To_Firm__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Of Calls To Firm</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_Of_Emails_To_Firm__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Of Emails To Firm</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_Of_Firm_Courses_Held__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Of Firm Courses Held</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_Of_Firm_Employees_Seeking_Training_At__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Of Firm Employees Seeking Training</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_Of_Firm_Expert_Visits_To_University__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Of Firm Expert Visits To University</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_Of_Joint_PCT_Patents_Filed__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Of Joint PCT Patents Filed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_Of_Joint_PCT_Patents_Issued__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Of Joint PCT Patents Issued</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_Of_Joint_Patents_Filed__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Of Joint Patents Filed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_Of_Joint_Patents_Issued__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Of Joint Patents Issued</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_Of_KU_Alumni_Serving_On_Firm_Board__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Of KU Alumni Serving On Firm Board</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_Of_KU_Alumni_Working_In_Firm__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Of KU Alumni Working In Firm</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_Of_KU_Faculty_And_Staff_Serving_On_Fir__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Of KU Faculty On Firm Board</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_Of_KU_Spinoff_Companies__c</fullName>
        <defaultValue>0</defaultValue>
        <description># Of KU Spinoff Companies related to this master organization</description>
        <inlineHelpText># Of KU Spinoff Companies related to this master organization</inlineHelpText>
        <label># Of KU Spinoff Companies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_Of_Key_KU_Alumni__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Of Key KU Alumni</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_Of_Key_Non_Alumni_On_Firm_Board__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Of Key Non-Alumni On Firm Board</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_Of_Licenses_Active__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Of Licenses Active</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_Of_Seminars_Given_By_Firm_At_KU__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Of Seminars Given By Firm At KU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_Of_Sponsored_Professorships__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Of Sponsored Professorships</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_SBIR_STTR_Grants_Applied__c</fullName>
        <defaultValue>0</defaultValue>
        <label># SBIR/STTR Grants Applied</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_SBIR_STTR_Grants_Awarded__c</fullName>
        <defaultValue>0</defaultValue>
        <label># SBIR/STTR Grants Awarded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>